# pytorch-demo

./: .gitignore  LeNet-5.py  README.md  pyproject.toml
