[project]
name = "pytorch-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pyqt5>=5.15.11",
    "torch>=2.9.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "jupyterlab>=4.5.0",
    "jupyterlab-lsp>=5.2.0",
    "notebook>=7.5.0",
    "python-lsp-server>=1.13.2",
]
